# rofi-bw

./: README.md  pyproject.toml
src/rofibw/: __init__.py  bw.py  cli.py  cmd.py
