[tool.poetry]
authors = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A handy script for browsing bitwarden passwords with rofi."
name = "rofibw"
readme = "README.md"
repository = "https://github.com/HarrisonTotty/rofi-bw"
version = "0.1.4"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rofi-bw = "rofibw:main"
